# toy-puzzles

./: README.md  pyproject.toml
src/heist/: heist.py
src/ingrid_digit_puzzle/: main.py
src/reciprocity_redux/: main.py  reciprocity.smt2
