[tool.poetry]
name = "toy-puzzle"
version = "0.1.0"
description = "Various puzzles and SMT solver based solutions"
authors = ["Benjamin Jones <benjaminfjones@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
z3-solver = "^4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
