[tool.poetry]
name = "toy-puzzle"
version = "0.2.0"
description = "SAT/SMT Solver Solutions to Various Puzzles"
authors = ["Benjamin Jones <benjaminfjones@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.13"
z3-solver = "^4.13"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
